--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nrwl/vite": "15.8.5",
     "@nrwl/webpack": "15.8.5",
     "@nrwl/workspace": "15.8.5",
+    "@tailwindcss/forms": "0.5.3",
     "@testing-library/react": "14.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
@@ -30,6 +31,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
+    "autoprefixer": "10.4.14",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -43,8 +45,10 @@
     "jest-environment-node": "^29.4.1",
     "jsdom": "~20.0.3",
     "nx": "15.8.5",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.3.0",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5",
