feat: add basic frontend

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@ping-pong/demo-lib": ["libs/demo-lib/src/index.ts"],
+      "@pong/layout": ["libs/ui/layout/src/index.ts"],
       "@pong/common-ui": ["libs/ui/common/src/index.ts"]
     }
   },
