--- a/apps/apis/users/project.json
+++ b/apps/apis/users/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "api-demo",
+  "name": "api-users",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/apis/demo/src",
+  "sourceRoot": "apps/apis/users/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,12 +10,12 @@
       "options": {
         "target": "node",
         "compiler": "tsc",
-        "outputPath": "dist/apps/apis/demo",
-        "main": "apps/apis/demo/src/main.ts",
-        "tsConfig": "apps/apis/demo/tsconfig.app.json",
-        "assets": ["apps/apis/demo/src/assets"],
+        "outputPath": "dist/apps/apis/users",
+        "main": "apps/apis/users/src/index.ts",
+        "tsConfig": "apps/apis/users/tsconfig.app.json",
+        "assets": ["apps/apis/users/src/assets"],
         "isolatedConfig": true,
-        "webpackConfig": "apps/apis/demo/webpack.config.js"
+        "webpackConfig": "apps/apis/users/webpack.config.js"
       },
       "configurations": {
         "production": {
@@ -28,11 +28,11 @@
     "serve": {
       "executor": "@nrwl/js:node",
       "options": {
-        "buildTarget": "api-demo:build"
+        "buildTarget": "api-users:build"
       },
       "configurations": {
         "production": {
-          "buildTarget": "api-demo:build:production"
+          "buildTarget": "api-users:build:production"
         }
       }
     },
@@ -40,14 +40,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/apis/demo/**/*.ts"]
+        "lintFilePatterns": ["apps/apis/users/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/apis/demo/jest.config.ts",
+        "jestConfig": "apps/apis/users/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
