--- a/package.json
+++ b/package.json
@@ -78,10 +78,12 @@
     "axios": "^1.3.6",
     "classnames": "2.3.2",
     "express": "^4.18.2",
+    "newtondb": "0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "tailwind-merge": "1.12.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "uuid": "9.0.0"
   }
 }
