--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
-    "serve": "nx serve"
+    "serve": "nx serve",
+    "build": "nx run-many --target=build --no-cache"
   },
   "private": true,
   "devDependencies": {
